--- a/AdvisorStylePage.css
+++ b/AdvisorStylePage.css
@@ -89,10 +89,6 @@ img.banner
 	padding-top: 50px;
 }
 
-#firstButton
-{
-
-}
 
 #secondButton
 {
@@ -103,6 +99,14 @@ img.banner
 {
 	margin-top:5px;
 }
+
+#pic
+{
+	float:right;
+	padding-top:20px;
+	padding-right:20px;
+}
+
 
 a.button
 {
@@ -130,10 +134,6 @@ a.button:hover
 	background:linear-gradient(to top,black,white);
 }
 
-a.button.icon
-{
-	background:url(resources/play.png);
-}
 
 a.button2
 {
@@ -212,17 +212,56 @@ p.paraBox
 }
 
 
-#VisitText
-{
-	color:white;
-	margin: 0 auto;
-	font-family: sans-serif;
-	font-weight: bold;
-	font-size: 10px;
+#containerFooter 
+{ 
 	position:relative;
-	top:-50px;
-	padding-left:35px;
+	width:100%;
 }
+	
+.containerContent
+{ 
+	
+	position:relative;  
+	width:25%; 
+	float:left;
+	color:white;
+}
+
+.containerCall
+{
+	position:relative;
+	width: 25%;
+	float:left;
+	color: white;
+}
+
+.containerContact
+{
+	position:relative;
+	width: 25%;
+	float:left;
+	color: white;
+}
+
+.containerCopyright
+{
+	position:relative;
+	width: 25%;
+	float:left;
+	color: white;
+}
+
+.contents
+{
+	font-family:"Open Sans",sans-serif;
+	font-size:10px;
+	float:right;
+	padding-bottom:20px;
+	padding-right:50px;
+	font-weight: bold;
+	margin-top:0;
+}
+
 
 
 
