--- a/AdvisorStylePage.css
+++ b/AdvisorStylePage.css
@@ -17,12 +17,11 @@ body
 
 img.headerImg
 {
-	width:90px;
-	height:70px;
-	padding-left: 50px;
-	padding-top:  50px;
-
+	position:relative;
+	top:50px;
 }
+
+
 
 p.AdvisorText
 {
@@ -30,8 +29,8 @@ p.AdvisorText
 	font-weight: bold;
 	color:gray;
 	position:relative;
-	top:-60px;
-	left:120px;
+	top:0px;
+	left:50px;
 	padding-bottom:0px;
 	padding-left: 0px;
 	margin:0 auto;
@@ -41,8 +40,8 @@ p.AdvisorText
 #LinksHeader
 {
 	position:relative;
-	top:-95px;
-	padding-left: 500px;
+	top:-40px;
+	padding-left: 450px;
 	width:5%;
 	display:inline;
 	word-spacing: 60px;
@@ -63,6 +62,10 @@ a.headerLinks:visited
 	color:#00BFFF;
 }
 
+a.headerLinks:hover
+{
+	background-color:gray;
+}
 
 #leftImg
 {
@@ -187,7 +190,7 @@ p.paraBox
 	clear:both;
 	width:100%;
 	background-color:black;
-	padding:90px;
+	padding:90px 0;
 }
 
 	
