--- a/AdvisorStylePage.css
+++ b/AdvisorStylePage.css
@@ -160,7 +160,7 @@ img.banner
 
 #paraBox
 {
-	height:245px;
+	height:234px;
 	background:#38a6a6;
 	border: 2px solid white;
 	margin-top: 5px;
@@ -173,7 +173,7 @@ p.paraBox
 	padding:30px;
 	color:white;
 	font-size:17px;
-	font-weight: bold;
+	font-weight:bold;
 }
 
 #footer
@@ -207,6 +207,7 @@ p.paraBox
 .imgFooter
 {
 	float:left;
+	padding-top:8px;
 }
 
 .clearfix
