--- a/AdvisorStylePage.css
+++ b/AdvisorStylePage.css
@@ -25,6 +25,7 @@ body
 	margin: 0 auto;
 	width: 40px;
 	opacity: 0;
+	cursor:pointer;
 	-ms-filter: alpha(opacity=0);
 	filter: alpha(opacity=0);
 	-webkit-transition: opacity 0.25s linear;
