--- a/AdvisorStylePage.css
+++ b/AdvisorStylePage.css
@@ -54,6 +54,27 @@ body
 	left: 770px;
 }
 
+.autop
+{
+	position:absolute;
+	top:580px;
+	height:50px;
+	width:50px;
+}
+
+#play
+{
+	background:url('resources/play2.png') no-repeat center;
+	left:750px;
+}
+
+#pause
+{
+	background: url('resources/pause.png') no-repeat center;
+	left:750px;
+}
+
+
 /*end of SLider*/
 
 #header
