--- a/trial/styling.css
+++ b/trial/styling.css
@@ -42,4 +42,22 @@ img
 	right: 460px;
 }
 
+.autop
+{
+	position:absolute;
+	top:250px;
+	height:50px;
+	width:50px;
+}
 
+#play
+{
+	background:url('resources/play2.png') no-repeat center;
+	left:650px;
+}
+
+#pause
+{
+	background: url('resources/pause.png') no-repeat center;
+	left:650px;
+}
