--- a/AdvisorStylePage.css
+++ b/AdvisorStylePage.css
@@ -52,14 +52,6 @@ body
 	left: 770px;
 }
 
-/*.autop
-{
-	position:absolute;
-	top:580px;
-	height:50px;
-	width:50px;
-}*/
-
 #play
 {
 	background:url('resources/play2.png') no-repeat center;
@@ -73,6 +65,14 @@ body
 	left:750px;
 	top:580px;
 }
+
+#counter
+{
+	left:790px;
+	top:595px
+}
+
+
 
 
 /*end of SLider*/
